--- a/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist_sv.properties
+++ b/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist_sv.properties
@@ -14,4 +14,4 @@ form.control.attachments.upload=Ladda upp och bifoga
 datalist.filter.header=Filter
 filterform.submit=Aktivera filter
 filterform.save=Spara filter
-rpdl.newComment=Du har en oläst kommentar tilldelad dig.
+rpdl.newComment=Du har en ol\u00E4st kommentar tilldelad dig.
