Show number of attached deviations with icon and tooltip

--- a/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist_sv.properties
+++ b/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist_sv.properties
@@ -15,3 +15,4 @@ datalist.filter.header=Filter
 filterform.submit=Aktivera filter
 filterform.save=Spara filter
 rpdl.newComment=Du har en ol\u00E4st kommentar tilldelad dig.
+rpdl.noOfAttachments=Till denna avvikelse finns {0} bifogade filer.
