Added actions for pdf download

--- a/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist_en.properties
+++ b/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist_en.properties
@@ -6,6 +6,7 @@ link.display=Show Version
 
 #datalist toolbar
 button.export-csv=Export as XLS
+menu.selected-item.exportPdf=Download as PDF
 
 form.attachments.dialog.destination.title=Choose upload destination
 form.control.attachments.upload=Upload & attach
