--- a/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist_sv.properties
+++ b/fme-alfresco-extdl-share/src/main/resources/alfresco/web-extension/messages/fme-datalist_sv.properties
@@ -7,6 +7,7 @@ link.display=Visa version
 
 #datalist toolbar
 button.export-csv=Exportera som XLS
+menu.selected-item.exportPdf=Ladda ner som PDF
 
 form.attachments.dialog.destination.title=V\u00e4lj var filen skall hamna
 form.control.attachments.upload=Ladda upp och bifoga
